--- a/src/components/SwipeInterface/SwipeInterface.module.scss
+++ b/src/components/SwipeInterface/SwipeInterface.module.scss
@@ -53,7 +53,7 @@
   right: 0;
   bottom: 0;
   z-index: 2;
-  transform: translateZ(-10px);
+  // transform: translateZ(-10px);
   opacity: 0.8;
   transition: none !important;
 }
@@ -65,7 +65,7 @@
   right: 0;
   bottom: 0;
   z-index: 1;
-  transform: translateZ(-20px);
+  // transform: translateZ(-20px);
   opacity: 0.6;
   transition: none !important;
 }
